[gd_scene load_steps=16 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Textures/b1.png" type="Texture" id=2]
[ext_resource path="res://Textures/b2.png" type="Texture" id=3]
[ext_resource path="res://Textures/b3.png" type="Texture" id=4]
[ext_resource path="res://Textures/b4.png" type="Texture" id=5]
[ext_resource path="res://Textures/b5.png" type="Texture" id=6]
[ext_resource path="res://QuizPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://ExtraModels/Skybox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/file_example_OOG_1MG.ogg" type="AudioStream" id=9]
[ext_resource path="res://Models/m1.tscn" type="PackedScene" id=10]
[ext_resource path="res://Models/m2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Models/m3.tscn" type="PackedScene" id=12]
[ext_resource path="res://Models/m4.tscn" type="PackedScene" id=13]
[ext_resource path="res://Models/m5.tscn" type="PackedScene" id=14]

[sub_resource type="CubeMesh" id=1]

[node name="World" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999638, -0.0268921, 0, 0.0268921, 0.999638, 0, 0.222095, 0.401911 )

[node name="Control" type="Control" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Camera/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Models" type="VBoxContainer" parent="Camera/Control/HBoxContainer"]
margin_right = 120.0
margin_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2

[node name="M1select" type="TextureButton" parent="Camera/Control/HBoxContainer/Models"]
margin_right = 120.0
margin_bottom = 120.0
texture_normal = ExtResource( 2 )

[node name="M2select" type="TextureButton" parent="Camera/Control/HBoxContainer/Models"]
margin_top = 124.0
margin_right = 120.0
margin_bottom = 244.0
texture_normal = ExtResource( 3 )

[node name="M3select" type="TextureButton" parent="Camera/Control/HBoxContainer/Models"]
margin_top = 248.0
margin_right = 120.0
margin_bottom = 368.0
texture_normal = ExtResource( 4 )

[node name="M4select" type="TextureButton" parent="Camera/Control/HBoxContainer/Models"]
margin_top = 372.0
margin_right = 120.0
margin_bottom = 492.0
texture_normal = ExtResource( 5 )

[node name="M5select" type="TextureButton" parent="Camera/Control/HBoxContainer/Models"]
margin_top = 496.0
margin_right = 120.0
margin_bottom = 616.0
texture_normal = ExtResource( 6 )

[node name="ModelSpace" type="VBoxContainer" parent="Camera/Control/HBoxContainer"]
margin_left = 124.0
margin_right = 1076.0
margin_bottom = 800.0
size_flags_horizontal = 3
alignment = 1

[node name="SldsandButtons" type="VBoxContainer" parent="Camera/Control/HBoxContainer"]
margin_left = 1080.0
margin_right = 1280.0
margin_bottom = 800.0
rect_min_size = Vector2( 200, 0 )

[node name="Sliders" type="VBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons"]
margin_right = 200.0
margin_bottom = 136.0

[node name="h1" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_right = 200.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h1"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Happy"

[node name="HSlider" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h1" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h2" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h2"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Sad"

[node name="HSlider2" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h2" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h3" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h3"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Angry"

[node name="HSlider3" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h3" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h5" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 60.0
margin_right = 200.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h5"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Fear"

[node name="HSlider5" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h5" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h4" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h4"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Weird 1"

[node name="HSlider4" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h4" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h6" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h6"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Weird 2"

[node name="HSlider6" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h6" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="h7" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders"]
margin_top = 120.0
margin_right = 200.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h7"]
margin_top = 1.0
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 0 )
text = "Weird 3"

[node name="HSlider7" type="HSlider" parent="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h7" groups=[
"slider",
]]
margin_left = 64.0
margin_right = 200.0
margin_bottom = 16.0
size_flags_horizontal = 3
ticks_on_borders = true

[node name="Buttons" type="HBoxContainer" parent="Camera/Control/HBoxContainer/SldsandButtons"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 160.0
size_flags_horizontal = 9
size_flags_stretch_ratio = 0.0

[node name="Quiz" type="Button" parent="Camera/Control/HBoxContainer/SldsandButtons/Buttons"]
margin_right = 42.0
margin_bottom = 20.0
text = "Quiz"

[node name="Quit" type="Button" parent="Camera/Control/HBoxContainer/SldsandButtons/Buttons"]
margin_left = 46.0
margin_right = 86.0
margin_bottom = 20.0
text = "Quit"

[node name="Debug" type="Label" parent="Camera/Control/HBoxContainer/SldsandButtons"]
visible = false
margin_top = 164.0
margin_right = 200.0
margin_bottom = 178.0

[node name="QuizPanel" parent="Camera" instance=ExtResource( 7 )]
margin_right = -30.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.644976, 0, 0.764203, 0, 1, 0, -0.764203, 0, 0.644976, 5.2549, 0.0217905, 4.48504 )
light_energy = 0.3

[node name="skyBox" parent="." instance=ExtResource( 8 )]
transform = Transform( 7.75633, 0, 0, 0, 7.75633, 0, 0, 0, 7.75633, 0, 0, 0 )
visible = false

[node name="apx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="afx" type="AudioStreamPlayer" parent="."]

[node name="m1" parent="." instance=ExtResource( 10 )]

[node name="m2" parent="." instance=ExtResource( 11 )]
visible = false

[node name="m3" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 0.981793, -0.189952, 0, 0.189952, 0.981793, 0, 0.0244792, -0.0409834 )
visible = false

[node name="m4" parent="." instance=ExtResource( 13 )]
visible = false

[node name="m5" parent="." instance=ExtResource( 14 )]
visible = false

[node name="base" type="MeshInstance" parent="."]
transform = Transform( 1.15216, 0, 0, 0, 0.112193, -0.0427047, 0, 0.0105955, 0.452189, 0, -0.0739292, 0 )
mesh = SubResource( 1 )
material/0 = null
[connection signal="pressed" from="Camera/Control/HBoxContainer/Models/M1select" to="." method="_on_M1select_pressed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/Models/M2select" to="." method="_on_M2select_pressed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/Models/M3select" to="." method="_on_M3select_pressed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/Models/M4select" to="." method="_on_M4select_pressed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/Models/M5select" to="." method="_on_M5select_pressed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h1/HSlider" to="." method="_on_HSlider1_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h2/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h3/HSlider3" to="." method="_on_HSlider3_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h5/HSlider5" to="." method="_on_HSlider5_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h4/HSlider4" to="." method="_on_HSlider4_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h6/HSlider6" to="." method="_on_HSlider6_value_changed"]
[connection signal="value_changed" from="Camera/Control/HBoxContainer/SldsandButtons/Sliders/h7/HSlider7" to="." method="_on_HSlider7_value_changed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/SldsandButtons/Buttons/Quiz" to="." method="_on_Quiz_pressed"]
[connection signal="pressed" from="Camera/Control/HBoxContainer/SldsandButtons/Buttons/Quit" to="." method="_on_Quit_pressed"]
